--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SITE_NAME_HEADER=Phil Hagen Jungschlaeger
 SITE_MAIN_LANGUAGE=de
-SITE_BASE_URL=
+SITE_BASE_URL=https://philhagenjungschlaeger.xyz/
 SHOW_CREATED_TIMESTAMP=true
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=true
